apps/oxlint/src/snapshots/fixtures__bulk_suppression__temp_test_--prune-suppressions --suppression-file non-existent.json .@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --prune-suppressions --suppression-file non-existent.json .
working directory: fixtures/bulk_suppression/temp_test
----------
Pruned suppression file: non-existent.json
----------
CLI result: LintSucceeded
----------
