apps/oxlint/src/snapshots/fixtures__bulk_suppression__temp_test_--suppress-all --suppression-file edge-case.json nonexistent_dir@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --suppress-all --suppression-file edge-case.json nonexistent_dir
working directory: fixtures/bulk_suppression/temp_test
----------
Generated suppression file: edge-case.json
----------
CLI result: LintSucceeded
----------
